Fixed number right align on cells.

--- a/packages/ketchup/src/components/kup-data-table/kup-data-table.scss
+++ b/packages/ketchup/src/components/kup-data-table/kup-data-table.scss
@@ -585,7 +585,10 @@ $fixed-row-class: fixed-row;
           }
 
           &.number {
-            text-align: right;
+            .cell-content {
+              display: block;
+              text-align: right;
+            }
           }
 
           .row-expander {
